feat(docker): enable flexible storage mounting
Mount entire project to support storage relocation outside webroot.
Storage moved via admin panel will persist after container restarts.

Signed-off-by: Anton Semenov <20430159+trydalcoholic@users.noreply.github.com>

--- a/docker/apache/conf/httpd.conf
+++ b/docker/apache/conf/httpd.conf
@@ -23,10 +23,10 @@ Group www-data
 
 # Basic server settings
 ServerName localhost
-DocumentRoot "/var/www/html"
+DocumentRoot "/var/www/public_html/upload"
 
 # Main directory configuration
-<Directory "/var/www/html">
+<Directory "/var/www/public_html/upload">
     Options Indexes FollowSymLinks
     AllowOverride All
     Require all granted
