--- a/docker/apache/conf/opencart.conf
+++ b/docker/apache/conf/opencart.conf
@@ -1,5 +1,5 @@
 # Basic settings for OpenCart application
-<Directory "/var/www/html">
+<Directory "/var/www/public_html/upload">
     # Enable .htaccess file processing
     AllowOverride All
 
