--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./upload:/var/www/html
+      - .:/var/www/public_html
     depends_on:
       php:
         condition: service_healthy
@@ -24,7 +24,7 @@ services:
       args:
         - PHP_VERSION=8.4
     volumes:
-      - ./upload:/var/www/html
+      - .:/var/www/public_html
     depends_on:
       mysql:
         condition: service_healthy
