fix(docker): enable secure storage relocation
Refactor volume mounts and entrypoint logic to allow moving the storage directory outside the web root securely.

- Mount the project root to `/var/www` instead of the web root.
- Create a symlink (`public_html` -> `upload`) at container start to define the web root, fixing issues with volume mounts.
- The PHP entrypoint now handles all filesystem setup, including correcting file ownership to `www-data` to prevent permission errors.

Signed-off-by: Anton Semenov <20430159+trydalcoholic@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - .:/var/www/public_html
+      - .:/var/www
     depends_on:
       php:
         condition: service_healthy
@@ -24,7 +24,7 @@ services:
       args:
         - PHP_VERSION=8.4
     volumes:
-      - .:/var/www/public_html
+      - .:/var/www
     depends_on:
       mysql:
         condition: service_healthy
