refactor(docker): cleanup container structure and improve user experience
- Remove public_html symlink to simplify container structure
- Configure separate home directory for www-data user (/home/www-data)
- Set proper permissions for storage relocation outside public directory
- Update php command to start directly in OpenCart upload directory

Signed-off-by: Anton Semenov <20430159+trydalcoholic@users.noreply.github.com>

--- a/docker/apache/conf/opencart.conf
+++ b/docker/apache/conf/opencart.conf
@@ -1,5 +1,5 @@
 # Basic settings for OpenCart application
-<Directory "/var/www/public_html">
+<Directory "/var/www/upload">
     # Enable .htaccess file processing
     AllowOverride All
 
