--- a/docker/apache/conf/httpd.conf
+++ b/docker/apache/conf/httpd.conf
@@ -23,10 +23,10 @@ Group www-data
 
 # Basic server settings
 ServerName localhost
-DocumentRoot "/var/www/public_html"
+DocumentRoot "/var/www/upload"
 
 # Main directory configuration
-<Directory "/var/www/public_html">
+<Directory "/var/www/upload">
     Options Indexes FollowSymLinks
     AllowOverride All
     Require all granted
