feat(docker): add nginx configuration
This commit adds a basic nginx configuration to the Docker setup.
It is an initial version intended for testing and development purposes.
The configuration is not yet considered production-ready.

Signed-off-by: Anton Semenov <20430159+trydalcoholic@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,40 @@ services:
     networks:
       - opencart
 
+#  nginx:
+#    container_name: opencart-nginx
+#    build:
+#      context: .
+#      dockerfile: docker/nginx/Dockerfile
+#      target: ${OPENCART_ENV:-development}
+#    ports:
+#      - "${HTTP_EXPOSE_PORT:-80}:80"
+#    volumes:
+#      - .:/var/www
+#    depends_on:
+#      php:
+#        condition: service_healthy
+#    healthcheck:
+#      test: ["CMD", "curl", "-f", "http://localhost/"]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
+#      start_period: 40s
+#    deploy:
+#      resources:
+#        limits:
+#          memory: 256M
+#          cpus: '0.5'
+#        reservations:
+#          memory: 128M
+#    logging:
+#      driver: "json-file"
+#      options:
+#        max-size: "10m"
+#        max-file: "3"
+#    networks:
+#      - opencart
+
   php:
     container_name: opencart-php
     build:
