feat(docker): add intl extension and sort php extensions
This commit adds the `intl` PHP extension to the Docker image. Although it is not a strict dependency, the extension is beneficial as the `oc_validate_email()` function may leverage the `idn_to_ascii()` function for more robust email validation.

The list of installed extensions is also sorted alphabetically to improve readability and consistency.

Signed-off-by: Anton Semenov <20430159+trydalcoholic@users.noreply.github.com>

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -8,15 +8,16 @@ FROM php:${PHP_VERSION}-fpm
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/local/bin/
 RUN install-php-extensions \
     @composer \
+    apcu \
     gd \
+    intl \
+    memcached \
     mysqli \
+    opcache \
     pdo_mysql \
     pdo_pgsql \
-    zip \
-    opcache \
-    apcu \
     redis \
-    memcached
+    zip
 
 # Configure www-data user home directory
 RUN usermod -d /home/www-data -m www-data
