feat(compression): introduce Compressor library with Gzip, Brotli, and ZSTD adapters
This commit adds a new `Compressor` library to the project. This library provides a unified API for handling various compression formats, including Gzip, Brotli, and ZSTD.

The new library offers:
- Support for multiple compression algorithms
- Configurable compression levels
- Automatic handling of file extensions
- File-based compression and decompression methods

This feature improves the project's ability to handle different compression types efficiently and sets the foundation for future optimizations.

Signed-off-by: Anton Semenov <20430159+trydalcoholic@users.noreply.github.com>

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -16,6 +16,7 @@ COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr
 RUN install-php-extensions \
     @composer \
     apcu \
+    brotli \
     gd \
     intl \
     memcached \
@@ -24,7 +25,8 @@ RUN install-php-extensions \
     pdo_mysql \
     pdo_pgsql \
     redis \
-    zip
+    zip \
+    zstd
 
 # Configure www-data user home directory
 RUN usermod -d /home/www-data -m www-data
