refactor(compressor): refactor to use dynamic adapters and add detection
- Update `Compressor` to use a dynamic approach by fetching adapters from the registry's `load` service.
- This changes the constructor signature to accept `Registry` and removes the old `adaptor` property.
- All public methods (`compress`, `decompress`, `getExtension`, `compressFile`, `decompressFile`, `isSupported`) are updated to accept the `algorithm` as a parameter.
- This refactoring allows for on-the-fly switching between compression algorithms without creating new `Compressor` instances.

This change greatly improves the flexibility and usability of the `Compressor` library by allowing the dynamic use of any supported algorithm and compression level on the fly, instead of being limited to a single, statically configured option.

Signed-off-by: Anton Semenov <20430159+trydalcoholic@users.noreply.github.com>

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -16,7 +16,6 @@ COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr
 RUN install-php-extensions \
     @composer \
     apcu \
-    brotli \
     gd \
     intl \
     memcached \
@@ -25,8 +24,7 @@ RUN install-php-extensions \
     pdo_mysql \
     pdo_pgsql \
     redis \
-    zip \
-    zstd
+    zip
 
 # Configure www-data user home directory
 RUN usermod -d /home/www-data -m www-data
