--- a/docker/nginx/conf/nginx.conf
+++ b/docker/nginx/conf/nginx.conf
@@ -64,14 +64,24 @@ http {
         text/css
         text/xml
         text/javascript
-        application/json
         application/javascript
+        application/x-javascript
+        application/json
+        application/xml
         application/xml+rss
+        application/rss+xml
         application/atom+xml
+        application/ld+json
+        application/manifest+json
+        application/xhtml+xml
         image/svg+xml
-        application/x-font-ttf
+        font/opentype
+        application/font-opentype
         application/vnd.ms-fontobject
-        font/opentype;
+        application/x-font-ttf
+        font/otf
+        font/eot
+        image/x-icon;
 
     # Gzip compression (fallback)
     gzip on;
@@ -84,11 +94,24 @@ http {
         text/css
         text/xml
         text/javascript
-        application/json
         application/javascript
+        application/x-javascript
+        application/json
+        application/xml
         application/xml+rss
+        application/rss+xml
         application/atom+xml
-        image/svg+xml;
+        application/ld+json
+        application/manifest+json
+        application/xhtml+xml
+        image/svg+xml
+        font/opentype
+        application/font-opentype
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        font/otf
+        font/eot
+        image/x-icon;
 
     # Security headers
     more_set_headers "X-Frame-Options: SAMEORIGIN";
@@ -108,7 +131,7 @@ http {
     ssl_stapling_verify on;
 
     # Rate limiting
-    limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
+    limit_req_zone $binary_remote_addr zone=login:10m rate=10r/m;
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
     include /etc/nginx/conf.d/*.conf;
